--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,4 +2,4 @@ fixtures:
   repositories:
     stdlib: git://github.com/puppetlabs/puppetlabs-stdlib.git
   symlinks:
-    lumberjack: "#{source_dir}"
+    logstash-forwarder: "#{source_dir}"
